--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,3 +11,5 @@ steps:
   args: ['run', 'deploy', 'flaskhelloworldapp', '--image', 'gcr.io/flaskhelloworldapp-419410/flaskhelloworldapp', '--region', 'us-central1', '--platform', 'managed','--port','80']
 images:
 - gcr.io/flaskhelloworldapp-419410/flaskhelloworldapp
+options:
+  logging: CLOUD_LOGGING_ONLY
